<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16px"
    tools:context="com.example.cineenigma.MainActivity">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/titre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:hint="@string/titre"
        />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/in_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/dateProjection"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Date" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/heureProjection"
            android:id="@+id/in_time" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Heure"
            android:id="@+id/btn_time" />
    </LinearLayout>


    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/noteScenario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:hint="@string/noteScenario"
        android:inputType="number"
        />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/noteRealisateur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:hint="@string/noteRealisateur"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/noteMusique"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:hint="@string/noteMusique"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="150dip"
            android:layout_weight="1"

            android:hint="@string/critique"
             />

    </LinearLayout>

    <Button
        android:id="@+id/add_film"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:onClick="addFilm"
        android:text="Ajouter"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse" />

    <Button
        android:id="@+id/all_film"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:onClick="AllFilms"
        android:text="Voir toutes les critiques"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse" />

    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:onClick="Send"
        android:text="Send"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/colorAccent"></TextView>


</LinearLayout>
